@@ -22,6 +22,8 @@ public:
   CStdString m_strVideo;
   CStdString m_strParameters;
   CStdString m_strCustomGame;
+  CStdString m_strThumb;
+  CStdString m_strLabel;
 };
 
 #endif // !defined(AFX_SHORTCUT_H__641CCF68_6D2A_426E_9204_C0E4BEF12D00__INCLUDED_)
